Prevent main display from overflowing
Calculator is now larger and decimals are fixed
length.

--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
 
 #calculator {
     flex-direction: column;
-    width: 320px;
-    height: 320px;
+    width: 500px;
+    height: 500px;
     padding: 3px;
     background-color: rgb(16, 61, 53);
     border: 1px solid rgb(35, 124, 108);
